<resources>
    <string name="app_name">RoseRide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Steven Feng</string>
    <string name="nav_header_subtitle">fengr@rose-hulman.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="trip_title">Title</string>
    <string name="trip_title_text">Enter your trip title here</string>
    <string name="trip_address">Address</string>
    <string name="trip_address_text_hint">Enter your trip address here</string>
    <string name="submit">submit</string>
    <string name="clear">clear</string>
    <string name="user_icon_description">user icon description</string>
    <string name="edit">edit</string>
    <string name="logout">logout</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_requests">Requests</string>
    <string name="menu_rides">Rides</string>
    <string name="drawer_switch_mode">Switch to Driver Mode</string>
    <string name="drawer_review_appointments">My Appointments</string>
    <string name="drawer_review_history">My History</string>
    <string name="drawer_review_requests">My Requests</string>
    <string name="drawer_favorites">My Favorites</string>
    <string name="drawer_location">My Location</string>
    <string name="date_title">Date(YYYY/MM/DD)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_login">Login</string>
    <string name="search_title">search_title</string>
    <string name="search_hint">search_hint</string>
</resources>