<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
<!--        <item-->
<!--            android:id="@+id/nav_home"-->
<!--            android:icon="@drawable/ic_baseline_assistant_24"-->
<!--            android:title="@string/menu_rides" />-->
        <item
            android:id="@+id/nav_switch_mode"
            android:icon="@drawable/ic_baseline_switch_account_24"
            android:title="@string/drawer_switch_mode" />
        <item
            android:id="@+id/nav_appointments"
            android:icon="@drawable/ic_baseline_edit_calendar_24"
            android:title="@string/drawer_review_appointments" />
        <item
            android:id="@+id/nav_my_posts"
            android:icon="@drawable/ic_baseline_bookmarks_24"
            android:title="@string/drawer_review_requests" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/drawer_location" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/drawer_favorites" />
    </group>
</menu>