<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/trip_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/trip_title" />

    <EditText
        android:id="@+id/trip_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trip_title_text"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:id="@+id/trip_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/trip_address" />

    <EditText
        android:id="@+id/trip_address_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trip_address_text_hint"
        android:importantForAutofill="no"
        android:inputType="text" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/submit" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear" />
    </RelativeLayout>
</LinearLayout>