<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"
    app:itemIconTint="@color/LightPink"
    app:font="@font/trade_winds">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ride"
            android:icon="@drawable/ic_baseline_assistant_24"
            android:title="@string/menu_rides" />
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_baseline_collections_bookmark_24"
            android:title="@string/menu_requests" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />
    </group>
</menu>