<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserFragment"
    android:background="#FFDDA0DD">


    <ImageView
        android:id="@+id/center_image"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/user_icon_description"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/center_image"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/alike_angular"
        android:textColor="@color/MediumSpringGreen"
        android:text="Steven Feng"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/profile_name"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/alike_angular"
        android:textColor="@color/Black"
        android:text="Your Profile"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profile_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/center_image"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/trade_winds"
        android:textColor="@color/DeepPink"
        android:text="8122237777"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_phone"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:textColor="@color/GreenYellow"
        android:text="fengr@rose-hulman.edu"
        android:textSize="20sp" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="60dp"
        android:text="@string/edit" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="60dp"
        android:text="@string/logout" />



</RelativeLayout>